fixed white space left in night mode

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4474,6 +4474,11 @@ table.stats tr.homebrew-hover {
 		background: $bg-color;
 	}
 
+	.input-group-addon, .form-control {
+		background: transparent;
+		color: #bbb;
+	}
+
 	/* *** */
 
 	/* Ace JS */
